WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283150
Errors aren't detected if media element isn't in the DOM.
https://bugs.webkit.org/show_bug.cgi?id=283150
Summary
Errors aren't detected if media element isn't in the DOM.
Jean-Yves Avenard [:jya]
Reported
2024-11-14 17:48:56 PST
When the video element isn't in the DOM, both the MediaPlayerPrivateMediaSourceAVFObjC and MediaPlayerPrivateWebM use a WebCoreDecompressionSession to listen to errors. While the WebCoreDecompressionSession let you set an error callback, it's not used. As a consequence, when an error occurs during playback of an offscreen element, errors won't be detected, the error event won't fire, video element won't be paused and will continue to render garbage data.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-14 19:30:04 PST
<
rdar://problem/139935149
>
Jean-Yves Avenard [:jya]
Comment 2
2024-11-14 19:40:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36676
Jean-Yves Avenard [:jya]
Comment 3
2024-11-17 20:05:40 PST
Committed
286685@main
(20984f6):
https://commits.webkit.org/286685@main
Reviewed commits have been landed. Closing PR #36676 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug