Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm
@@ -1489,6 +1489,13 @@ void MediaPlayerPrivateWebM::ensureDecompressionSession()
     m_decompressionSession = WebCoreDecompressionSession::createOpenGL();
     m_decompressionSession->setTimebase([m_synchronizer timebase]);
     m_decompressionSession->setResourceOwner(m_resourceOwner);
+    m_decompressionSession->setErrorListener([weakThis = WeakPtr { *this }](OSStatus) {
+        if (RefPtr protectedThis = weakThis.get()) {
+            protectedThis->setNetworkState(MediaPlayer::NetworkState::DecodeError);
+            protectedThis->setReadyState(MediaPlayer::ReadyState::HaveNothing);
+            protectedThis->m_errored = true;
+        }
+    });
 
     registerNotifyWhenHasAvailableVideoFrame();
     
